--- a/1. Geometric Series for Elementary Economics.md
+++ b/1. Geometric Series for Elementary Economics.md
@@ -1,4 +1,21 @@
-## 1.1 Overview 知识总览
-### 1.1.1 部分存款准备金制度
-### 1.1.2 符号说明
-### 1.1.3 基础数学知识
+## 1. Geometric Series for Elementary Economics 基础经济学中的几何级数
+### 1.1 Geometric Series Formula 几何级数公式
+设 𝑐 ∈ (−1, 1)，有以下这么一则无穷级数：
+
+![image](https://user-images.githubusercontent.com/46322797/130984771-6c0b538b-23b5-4f93-83b3-a1cbe22f2aa3.png)
+
+对于这个无穷级数，我们可以两端都乘以 (1 - 𝑐)，最终得到以下公式：
+
+![image](https://user-images.githubusercontent.com/46322797/130984812-cef37772-a53f-45a5-a7f6-5c05b0a03f79.png) 
+
+此外，我们也会经常看到这样的有限几何级数
+
+![image](https://user-images.githubusercontent.com/46322797/130984837-94956b8c-b640-439f-afc6-6c83282d7379.png)
+
+与无穷几何级数类似，我们可以得到这样的公式：
+
+![image](https://user-images.githubusercontent.com/46322797/130984969-817e6c1b-d988-4d82-a2f2-d2478895d73e.png)
+
+
+
+### 1.2 The Keynesian Multiplier 凯恩斯乘数
