Update 1. Geometric Series for Elementary Economics.md

--- a/1. Geometric Series for Elementary Economics.md
+++ b/1. Geometric Series for Elementary Economics.md
@@ -15,7 +15,6 @@
 与无穷几何级数类似，我们可以得到这样的公式：
 
 ![image](https://user-images.githubusercontent.com/46322797/130984969-817e6c1b-d988-4d82-a2f2-d2478895d73e.png)
-
-
+![image](https://user-images.githubusercontent.com/46322797/130986657-8665d741-5726-4db3-8c66-61730424535b.png)
 
 ### 1.2 The Keynesian Multiplier 凯恩斯乘数
