--- a/1. Geometric Series for Elementary Economics.md
+++ b/1. Geometric Series for Elementary Economics.md
@@ -8,13 +8,15 @@
 
 ![image](https://user-images.githubusercontent.com/46322797/130984812-cef37772-a53f-45a5-a7f6-5c05b0a03f79.png) 
 
-此外，我们也会经常看到这样的有限几何级数
+此外，我们也会经常看到这样的有限几何级数![image](https://user-images.githubusercontent.com/46322797/130987188-d392a6ea-bbc6-4788-8826-b3beb2b3a92a.png)
 
 ![image](https://user-images.githubusercontent.com/46322797/130984837-94956b8c-b640-439f-afc6-6c83282d7379.png)
 
 与无穷几何级数类似，我们可以得到这样的公式：
 
 ![image](https://user-images.githubusercontent.com/46322797/130984969-817e6c1b-d988-4d82-a2f2-d2478895d73e.png)
+
+
 ![image](https://user-images.githubusercontent.com/46322797/130986657-8665d741-5726-4db3-8c66-61730424535b.png)
 
 ### 1.2 The Keynesian Multiplier 凯恩斯乘数
